# android-pdfium

./: .gitignore  CMakeLists.txt  README.md  build.diff  build.gradle  build.sh  consumer-proguard-rules.pro  proguard-rules.pro  settings.gradle
libmodpdfium/: .gitignore  CMakeLists.txt  build.gradle
libmodpdfium/src/main/: AndroidManifest.xml
src/androidTest/java/com/github/axet/pdfium/: ApplicationTest.java
src/main/: AndroidManifest.xml
src/main/cpp/: jni.cpp
src/main/java/com/github/axet/pdfium/: Pdfium.java
src/main/java/com/shockwave/pdfium/: Config.java  PdfiumCore.java
src/main/jni/: Android.mk  Application.mk
src/main/jni/src/: jni.cpp  mainJNILib.cpp
